# netops.io

./: .pylintrc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tasks.py
.github/workflows/: linting.yaml  unit-tests.yaml
development/: Dockerfile  creds.env  docker-compose.yaml
development/haproxy/: haproxy.cfg
netopsio/: manage.py
netopsio/.github/workflows/: unit-tests.yaml
netopsio/core/: __init__.py  admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
netopsio/core/api/: __init__.py  serializers.py  urls.py  views.py
netopsio/core/migrations/: 0001_add_request_log.py
netopsio/core/templates/core/: task.html  task_details.html  tasks.html  whois.html
netopsio/core/tests/: test_api.py  test_models.py  test_tasks.py  test_views.py
netopsio/home/: apps.py  serializers.py  tests.py  urls.py  views.py
netopsio/netopsio/: __init__.py  asgi.py  celery.py  settings.py  urls.py  utilities.py  wsgi.py
netopsio/netopsio/tests/: test_utilities.py
netopsio/nmap/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
netopsio/nmap/migrations/: 0001_initial.py
netopsio/ping/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
netopsio/ping/migrations/: 0001_initial.py  0002_pingrequest_task_id.py
netopsio/scripts/: delay-start.sh
netopsio/templates/: base.html
netopsio/traceroute/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
netopsio/traceroute/migrations/: 0001_initial.py
(+6 files in other folders)
